# Raytracer

./: .gitignore  .gitmodules  Cargo.toml  Doxyfile  Makefile  README.md  car.ron  config.ron  config.toml
.github/workflows/: ci.yml  docs.yml
assets/: car.ron  city.ron  color.ron  house.ron
docs/: header.html  project.md
src/: camera.rs  color.rs  main.rs  ray.rs  scene.rs  vec3.rs
src/lights/directional_light/: Cargo.toml
src/lights/directional_light/src/: lib.rs
src/lights/point_light/: Cargo.toml
src/lights/point_light/src/: lib.rs
src/materials/flat_color/: Cargo.toml
src/materials/flat_color/src/: lib.rs
src/primitives/: mod.rs  sphere.rs
src/primitives/cone/: Cargo.toml
src/primitives/cube/: Cargo.toml
src/primitives/cylinder/: Cargo.toml
src/primitives/plane/: Cargo.toml
src/primitives/sphere/: Cargo.toml
src/primitives/tetrahedron/: Cargo.toml
src/primitives/torus/: Cargo.toml
src/raytracer/: Cargo.toml  lib.rs  loader.rs  main.rs
src/raytracer/camera/: camera.rs  mod.rs
src/raytracer/errors/: errors.rs  mod.rs
src/raytracer/lights/: mod.rs
src/raytracer/materials/: mod.rs
src/raytracer/maths/: mod.rs  rotation.rs  vec3.rs
src/raytracer/plugins/: mod.rs
src/raytracer/primitives/: mod.rs
src/raytracer/rendering/: aabb.rs  color.rs  mod.rs  ray.rs  transform.rs
src/raytracer/rendering/bvh/: builder.rs  mod.rs  node.rs  split.rs
src/raytracer/scene/: mod.rs
src/raytracer/scene/preprocessor/: error.rs  expand.rs  mod.rs  transform.rs
src/raytracer/sfml/: controls.rs  display.rs  mod.rs
(+7 files in other folders)
