[workspace]
members = [
    "src/raytracer",
    "src/primitives/sphere",
    "src/primitives/plane",
    "src/primitives/cylinder",
    "src/primitives/cube",
    "src/primitives/obj",
    "src/materials/flat_color",
    "src/lights/point_light",
    "src/lights/directional_light"
]
resolver = "2"
