[workspace]
members = [
    "src/raytracer",
    "src/primitives/sphere",
    "src/primitives/plane",
    "src/primitives/cylinder",
    "src/primitives/cone",
    "src/primitives/cube",
    "src/primitives/obj",
    "src/primitives/tetrahedron",
    "src/materials/flat_color",
    "src/lights/point_light",
    "src/primitives/torus",
    "src/lights/directional_light"
]
resolver = "2"
